--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@
 
     <!--Header-->
     <header class="header">
-        <div class="container main-nav">
-            <nav class="nav">
-                <a href="/index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
+        <div class="container header__container--flex">
+            <nav class="header__nav">
+                <a href="/index.html" class="header__logo">Web<span class="header__logo-studio">Studio</span></a>
 
                 <ul class="list site-nav">
                     <li class="item"><a href="./index.html" class="link ">Студия</a></li>
