--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
 
-    <!--Header-->
+    <!-------------------------------------------------HEADER--------------------------------------------------------->
     <header class="header">
         <div class="container header__container--flex ">
             <nav class="header__nav">
@@ -46,7 +46,7 @@
     </header>
 
 
-    <!--Hero-->
+    <!-------------------------------------------------HERO----------------------------------------------------------->
     <main>
         <section class="hero">
             <h1 class="hero__title">Эффективные решения<br> для вашего бизнеса</h1>
@@ -54,7 +54,7 @@
         </section>
 
 
-        <!--Features-->
+        <!-------------------------------------------FEATERS---------------------------------------------------------->
         <section class="section">
             <div class="container">
                 <h2 class="section__title section__title--visually-hidden">Особенности </h2>
@@ -103,7 +103,7 @@
             </div>
         </section>
 
-        <!--About-->
+        <!------------------------------------------------ABOUT-------------------------------------------------------->
         <section class="section section--padding">
             <div class="container">
                 <h2 class="section__title">Чем мы занимаемся</h2>
@@ -129,7 +129,7 @@
             </div>
         </section>
 
-        <!--Team-->
+        <!-------------------------------------------------TEAM------------------------------------------------------->
         <section class="section section--bg-color">
             <div class="container">
                 <h2 class="section__title">Наша команда</h2>
@@ -295,7 +295,7 @@
             </div>
         </section>
 
-        <!-- Clients -->
+        <!---------------------------------------------- CLIENTS ------------------------------------------------------->
         <section class="section">
             <div class="container">
                 <h2 class="section__title">Постоянные клиенты</h2>
@@ -353,7 +353,7 @@
         </section>
     </main>
 
-    <!------------------------------------------FOOTER----------------------------------->
+    <!---------------------------------------------------FOOTER------------------------------------------------------>
     <footer class="footer">
         <div class="container footer--flex">
             <div><a href="/index.html" class="logo footer__logo">Web<span class="logo__text--color">Studio</span></a>
@@ -425,7 +425,7 @@
 
     </footer>
 
-    <!----------------------------------------- MODAL---------------------------------------->
+    <!--------------------------------------------------- MODAL--------------------------------------------------------->
 
     <div data-modal class="backdrop backdrop--is-hidden">
         <div class="modal">
