--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
         <!-------------------------------------------FEATERS---------------------------------------------------------->
         <section class="section">
             <div class="container">
-                <h2 class="section__title section__title--visually-hidden">Особенности </h2>
+                <h2 class="section__title visually-hidden">Особенности </h2>
                 <ul class="features ">
                     <li class="features__item">
                         <div class="features__box"><svg class="features__icon" width="70px" height="70px">
@@ -427,7 +427,7 @@
 
     <!--------------------------------------------------- MODAL--------------------------------------------------------->
 
-    <div data-modal class="backdrop backdrop--is-hidden">
+    <div data-modal class="backdrop is-hidden">
         <div class="modal">
 
             <button data-modal-close type="button" class="close-btn">
